--------------------
Zmiany w EWDskalowanie 0.9.3 (2015-09-21)

Funkcje przeniesione gdzie indziej:
- przeiwdywanie_rasch() do pakietu EWDskale.

--------------------
Zmiany w EWDskalowanie 0.9.2 (2015-09-14)

Naprawione błędy:
- Drobna (choć ważna dla poprawnego działania) poprawka, związana z tym, że
  grepl() przestał akceptować NULL jako wyrażenie regularne.
- Przy obróbce nazw zmiennych najpierw dajemy tolower(), a potem unique(),
  nie na odwrót.

--------------------
Zmiany w EWDskalowanie 0.9.1 (2015-09-05)

- Nowe funkcjonalności:
  - skaluj() akceptuje jako dane obiekty klasy 'tbl_df' (dplyr-owa "nakładka" na
    data frame); cały czas może mieć jednak problem z takimi obiektami w opisie
    procedury skalowania.

--------------------
Zmiany w EWDskalowanie 0.9 (2015-09-01)

- Funkcje "wysokiego poziomu" automatyzujące skalowanie egzaminów zostały
  przeniesione do pakietu EWDskale:
  - skaluj_egz_gimn();
  - skaluj_egz_gimn_rasch();
  - skaluj_matura();
  - skaluj_matura_rasch();
  - skaluj_sprawdzian();
  - sprawdz_wyniki_skalowania().

--------------------
Zmiany w EWDskalowanie 0.8 (2015-05-22)

- Funkcje odpowiedzialne za tworzenie i przekształcanie skal testów zostały
  przeniesione do nowego pakietu EWDskale:
  - kryteria_z_nazw();
  - lacz_kryteria_zadan();
  - pobierz_mozliwe_wartosci();
  - pobierz_wiazki_pytania_kryteria();
  - polacz_kryteria_mirt();
  - przygotuj_parametry_IRT();
  - skalowanieWieluCzesci();
  - skaluj_laczenie_mirt();
  - skaluj_polichorycznie();
  - skroc_skale().

--------------------
Zmiany w EWDskalowanie 0.7 (2014-11-17)

- Nowe funkcje:
  - skaluj_matura() implementuje workflow skalowania matury na potrzeby
    wskaźników trzyletnich.

- Nowe funkcjonalności:
  - procedura_1k_1w(): nowe parametry umożliwiające oznaczenie, które zmienne
    nie mogą być usuwane ze względu na niską dyskryminację;
  - skaluj(): nowy parametr 'bezWartosciStartowychParametrowTypu' pozwalajacy