@@ -8,8 +8,7 @@ Maintainer: Tomasz Zoltak <tomek@zozlak.org>
 Description: Functions to assist IRT calibrations developed while working on
     Polish Educational Value-Added indicators.
 Depends:
-    R (>= 2.15.0),
-    plyr
+    R (>= 2.15.0)
 License: MIT + file LICENSE
 Language: pl
 NeedsCompilation: no
