@@ -233,11 +233,13 @@
 #'         data framie nie jest całkiem przyjazny (zanim coś z tym zrobisz, sprawdź,
 #'         jak to wygląda).}
 #'   \item{\code{parametry} lista składająca się z elementów: \code{surowe},
-#'         \code{stdyx}, \code{stdy}, \code{std} i \code{r2}, zawierająca wyestymowane
+#'         \code{stdyx}, \code{stdy}, \code{std} i \code{r2} zawierająca wyestymowane
 #'         parametry modelu, odpowiednio: surowe, standaryzowane ze względu zarówno na
 #'         zmienną zależną jak i zmienną niezależną, standaryzowane tylko ze względu na
 #'         zmienną zależną, nie pamiętam co to za standaryzacja - sprawdź w dokumentacji
-#'         Mplusa i statystyki R-kwadrat.}
+#'         Mplusa i statystyki R-kwadrat. W przypadku modeli wielogrupwych zawiera
+#'         dodatkowo element code{grupyMapowanie}, w którym opisane jest mapowanie
+#'         kobinacji wartośc zmiennych grupujących na numery grup.}
 #'   \item{\code{zapis} data frame zawierający wyliczone oszacowania (co do zasady EAP)
 #'         wartości cech ukrytych dla poszczególnych obserwacji i ich błędy standardowe
 #'         (z wyjątkiem modeli wielogrupowych, bo Mplus nie zwraca dla nich obecnie
@@ -699,7 +701,7 @@ skaluj = function(dane, opisProcedury, idObs, tytul="", zmienneCiagle=NULL,
       if (!is.null(krok$wieleGrup)) {
         wartosciZmGrupujacej = unique(dane[, paste0("gr_tmp", i)])
         variable$classes = krok$wieleGrup$liczbaGrup = length(wartosciZmGrupujacej)
-        variable$knownclass = paste0(paste0("gr_tmp", i), " = ", wartosciZmGrupujacej)
+        variable$knownclass = paste0(paste0("gr_tmp", i), "=", wartosciZmGrupujacej)
         analysis$type = "MIXTURE"
         analysis$algorithm = "INTEGRATION"
       }
@@ -726,6 +728,9 @@ skaluj = function(dane, opisProcedury, idObs, tytul="", zmienneCiagle=NULL,
       if ("brak_zbieznosci" %in% names(wyniki[[i]][[j]])) {
         message("   ###################################\n    Nie osiągnięto zbieżności!\n   ###################################")
         return(list(wyniki=wyniki, tenKrok=krok))
+      }
+      if (!is.null(krok$wieleGrup)) {
+        wyniki[[i]][[j]]$parametry$grupyMapowanie = grupyMapowanie[[i]]
       }
       # zapis ocen czynnikowych do bardziej zwartej i łatwiej dostępnej postaci
       if (!is.null(wyniki[[i]][[j]]$zapis)) {
